Configure connection string

--- a/src/apsys.heartbeat.webapi/appsettings.json
+++ b/src/apsys.heartbeat.webapi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbConnectionString": "Server=.;Database=databasename.devel;Trusted_Connection=True;"
+    "AppDbConnectionString": "Server=.;Database=apsys.heartbeat.devel;Trusted_Connection=True;"
   },
   "CorsConfiguration": {
     "AllowedOrigins": "https://localhost:5173/"
