--- a/src/apsys.heartbeat.webapi/apsys.heartbeat.webapi.csproj
+++ b/src/apsys.heartbeat.webapi/apsys.heartbeat.webapi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -20,6 +21,12 @@
   <ItemGroup>
     <ProjectReference Include="..\apsys.heartbeat.repositories.nhibernate\apsys.heartbeat.repositories.nhibernate.csproj" />
     <ProjectReference Include="..\apsys.heartbeat.services\apsys.heartbeat.services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
