--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -6,35 +6,17 @@ trigger:
 pr: none
 
 pool:
-  name: "Default"
+  name: "Azure Pipelines"
   vmImage: "windows-latest"
 
 variables:
-  - group: project-variables-group
-  - name: buildPlatform
-    value: "Any CPU"
   - name: projectName
-    value: "femsa.shareholders"
+    value: "apsys.heartbeat"
   - name: buildConfiguration
     value: "Release"
-  - name: packageSuffix
-    value: ""
-  - name: octopusChannel
-    value: "Default"
-  - name: octopusSpaceName
-    value: "Default"
-  - name: connectionString
-    value: "Server=localhost\\SQLEXPRESS;Database=femsaservicios.shareholders.devel;;User ID=devopsuser;Password=a9O5Kx2P;"
-  - name: environmentName
-    value: "Production"
 
 extends:
   template: base-pipeline.yml
   parameters:
     projectName: $(projectName)
     buildConfiguration: $(buildConfiguration)
-    octopusChannel: $(octopusChannel)
-    octopusSpaceName: $(octopusSpaceName)
-    connectionString: $(connectionString)
-    packageSuffix: $(packageSuffix)
-    environmentName: $(environmentName)
