--- a/ci/base-pipeline.yml
+++ b/ci/base-pipeline.yml
@@ -12,6 +12,8 @@ jobs:
   - job: BuildSolution
     displayName: Build and test solution
     steps:
+      - checkout: self
+        fetchDepth: 0
       - template: build-solution.yml
         parameters:
           projectName: "${{parameters.projectName}}"
