--- a/ci/azure-pipelines-devel.yml
+++ b/ci/azure-pipelines-devel.yml
@@ -15,6 +15,22 @@ variables:
   - name: buildConfiguration
     value: "Debug"
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'sonarqube'
+    organization: 'apsys-dev'
+    scannerMode: 'MSBuild'
+    projectKey: 'apsys-dev_apsys-heartbeat'
+    projectName: 'apsys-heartbeat'
+
+- task: SonarCloudAnalyze@1
+  inputs:
+    jdkversion: 'JAVA_HOME_11_X64'
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
+
 extends:
   template: base-pipeline.yml
   parameters:
