--- a/ci/azure-pipelines-devel.yml
+++ b/ci/azure-pipelines-devel.yml
@@ -15,8 +15,22 @@ variables:
   - name: buildConfiguration
     value: "Debug"
 
-extends:
-  template: base-pipeline.yml
-  parameters:
-    projectName: $(projectName)
-    buildConfiguration: $(buildConfiguration)
+jobs:
+  - job: BuildSolution
+    displayName: Build and test solution
+    steps:
+      - checkout: self
+        fetchDepth: 0
+      - task: DotNetCoreCLI@2
+        displayName: "Restore packages"
+        inputs:
+          command: "restore"
+          projects: "${{parameters.baseFolder}}${{parameters.projectName}}.sln"
+          feedsToUse: "config"
+          nugetConfigPath: "${{parameters.baseFolder}}NuGet.Config"
+      - task: DotNetCoreCLI@2
+        displayName: "Build solution"
+        inputs:
+          projects: "${{parameters.baseFolder}}${{parameters.projectName}}.sln"
+          arguments: "--configuration ${{parameters.buildConfiguration}}"
+          
