--- a/ci/azure-pipelines-devel.yml
+++ b/ci/azure-pipelines-devel.yml
@@ -15,7 +15,7 @@ variables:
   - name: buildConfiguration
     value: "Debug"
   - name: baseFolder
-    value: '/src'
+    value: 'src/'
 
 jobs:
   - job: BuildSolution
@@ -23,6 +23,7 @@ jobs:
     steps:
       - checkout: self
         fetchDepth: 0
+          
       - task: DotNetCoreCLI@2
         displayName: "Restore packages"
         inputs:
@@ -30,9 +31,28 @@ jobs:
           projects: "$(baseFolder)$(projectName).sln"
           feedsToUse: "config"
           nugetConfigPath: "$(baseFolder)NuGet.Config"
+
+      - task: SonarCloudPrepare@1
+        displayName: "Prepare code analysis"
+        inputs:
+          SonarCloud: 'sonarqube'
+          organization: 'apsys-dev'
+          scannerMode: 'MSBuild'
+          projectKey: 'apsys-dev_apsys-heartbeat'
+          projectName: 'apsys-heartbeat'
+
       - task: DotNetCoreCLI@2
         displayName: "Build solution"
         inputs:
           projects: "$(baseFolder)$(projectName).sln"
           arguments: "--configuration $(buildConfiguration)"
-          
+
+      - task: SonarCloudAnalyze@1
+        displayName: "Run code analysis"
+        inputs:
+          jdkversion: 'JAVA_HOME_11_X64'
+
+      - task: SonarCloudPublish@1
+        displayName: "Publish code analysis result"
+        inputs:
+          pollingTimeoutSec: '300'
