Add devel and feature branch

--- a/ci/pipeline-features.yml
+++ b/ci/pipeline-features.yml
@@ -12,20 +12,21 @@ pool:
   vmImage: "windows-latest"
 
 variables:
+  - group: project-variables-group
   - name: projectName
     value: "apsys.heartbeat"
   - name: buildConfiguration
     value: "Debug"
   - name: baseFolder
-    value: 'src/'
+    value: "src/"
 
 jobs:
-  - job: BuildSolution
+  - job: BuildTestSolution
     displayName: Build and test solution
     steps:
       - checkout: self
         fetchDepth: 0
-          
+
       - task: DotNetCoreCLI@2
         displayName: "Restore packages"
         inputs:
@@ -37,11 +38,11 @@ jobs:
       - task: SonarCloudPrepare@1
         displayName: "Prepare code analysis"
         inputs:
-          SonarCloud: 'sonarqube'
-          organization: 'apsys-dev'
-          scannerMode: 'MSBuild'
-          projectKey: 'apsys-dev_apsys-heartbeat'
-          projectName: 'apsys-heartbeat'
+          SonarCloud: "sonarqube"
+          organization: "apsys-dev"
+          scannerMode: "MSBuild"
+          projectKey: "apsys-dev_apsys-heartbeat"
+          projectName: "apsys-heartbeat"
 
       - task: DotNetCoreCLI@2
         displayName: "Build solution"
@@ -52,9 +53,9 @@ jobs:
       - task: SonarCloudAnalyze@1
         displayName: "Run code analysis"
         inputs:
-          jdkversion: 'JAVA_HOME_11_X64'
+          jdkversion: "JAVA_HOME_11_X64"
 
       - task: SonarCloudPublish@1
         displayName: "Publish code analysis result"
         inputs:
-          pollingTimeoutSec: '300'
+          pollingTimeoutSec: "300"
