--- a/ci/pipeline-devel.yml
+++ b/ci/pipeline-devel.yml
@@ -1,7 +1,7 @@
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
 trigger:
-  - devel
+  - master
 
 pr: none
 
@@ -10,49 +10,80 @@ pool:
   vmImage: "windows-latest"
 
 variables:
+  - group: project-variables-group
   - name: projectName
     value: "apsys.heartbeat"
   - name: buildConfiguration
     value: "Debug"
   - name: baseFolder
-    value: 'src/'
+    value: "src/"
+  - name: packageSuffix
+    value: "-beta"
+  - name: octopusSpaceName
+    value: "apsys-mx"
 
-jobs:
-  - job: BuildSolution
-    displayName: Build and test solution
-    steps:
-      - checkout: self
-        fetchDepth: 0
-          
-      - task: DotNetCoreCLI@2
-        displayName: "Restore packages"
-        inputs:
-          command: "restore"
-          projects: "$(baseFolder)$(projectName).sln"
-          feedsToUse: "config"
-          nugetConfigPath: "$(baseFolder)NuGet.Config"
+stages:
+  - stage: Build
+    displayName: Build and run static and dynamic tests
+    jobs:
+      - job: BuildTestSolution
+        displayName: Build and test solution
+        steps:
+          - checkout: self
+            fetchDepth: 0
 
-      - task: SonarCloudPrepare@1
-        displayName: "Prepare code analysis"
-        inputs:
-          SonarCloud: 'sonarqube'
-          organization: 'apsys-dev'
-          scannerMode: 'MSBuild'
-          projectKey: 'apsys-dev_apsys-heartbeat'
-          projectName: 'apsys-heartbeat'
+          - task: DotNetCoreCLI@2
+            displayName: "Restore packages"
+            inputs:
+              command: "restore"
+              projects: "$(baseFolder)$(projectName).sln"
+              feedsToUse: "config"
+              nugetConfigPath: "$(baseFolder)NuGet.Config"
 
-      - task: DotNetCoreCLI@2
-        displayName: "Build solution"
-        inputs:
-          projects: "$(baseFolder)$(projectName).sln"
-          arguments: "--configuration $(buildConfiguration)"
+          - task: SonarCloudPrepare@1
+            displayName: "Prepare code analysis"
+            inputs:
+              SonarCloud: "sonarqube"
+              organization: "apsys-dev"
+              scannerMode: "MSBuild"
+              projectKey: "apsys-dev_apsys-heartbeat"
+              projectName: "apsys-heartbeat"
 
-      - task: SonarCloudAnalyze@1
-        displayName: "Run code analysis"
-        inputs:
-          jdkversion: 'JAVA_HOME_11_X64'
+          - task: DotNetCoreCLI@2
+            displayName: "Build solution"
+            inputs:
+              projects: "$(baseFolder)$(projectName).sln"
+              arguments: "--configuration $(buildConfiguration)"
 
-      - task: SonarCloudPublish@1
-        displayName: "Publish code analysis result"
-        inputs:
-          pollingTimeoutSec: '300'
+          - task: SonarCloudAnalyze@1
+            displayName: "Run code analysis"
+            inputs:
+              jdkversion: "JAVA_HOME_11_X64"
+
+          - task: SonarCloudPublish@1
+            displayName: "Publish code analysis result"
+            inputs:
+              pollingTimeoutSec: "300"
+
+      - job: PackPushArtifacts
+        displayName: Pack and push artifacts
+        dependsOn: 'BuildTestSolution'
+        steps:
+        - template: pack-push-artifact.yml
+          parameters:
+            buildConfiguration: $(buildConfiguration)
+            projectName: "$(projectName).webapi"
+            nuGetTitle: "$(projectName) webpi package"
+            nuGetDescription: "Package of the $(projectName) webapi project"
+            packageSuffix: $(packageSuffix)
+            octopusSpaceName: $(octopusSpaceName)
+            baseFolder: $(baseFolder)
+        - template: pack-push-artifact.yml
+          parameters:
+            buildConfiguration: $(buildConfiguration)
+            projectName: "$(projectName).migrations"
+            nuGetTitle: "$(projectName) migrations package"
+            nuGetDescription: "Package of the $(projectName) migrations project"
+            packageSuffix: $(packageSuffix)
+            octopusSpaceName: $(octopusSpaceName)
+            baseFolder: $(baseFolder)
